--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "schema": "prisma/schema/schema.prisma"
   },
   "scripts": {
     "build": "nest build",
@@ -33,7 +34,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.17.0",
     "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
     "passport-jwt": "^4.0.1",
@@ -60,7 +61,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.15.0",
+    "prisma": "^5.17.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
