--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.17.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
     "passport-jwt": "^4.0.1",
