WIP: Desenvolvimento de rotas para prospecção/imóvel

--- a/example.env
+++ b/example.env
@@ -1,8 +1,11 @@
-DATABASE_URL=""
-SGU_DATABASE_URL=""
-JWT_SECRET =""
-RT_SECRET =""
-ENVIRONMENT = "local"
+DATABASE_URL=
+SGU_DATABASE_URL=
+JWT_SECRET=
+RT_SECRET=
+ENVIRONMENT="local"
+
+GEOSAMPA_WFS_BASE_URL="http://wfs.geosampa.prefeitura.sp.gov.br/geoserver/geoportal/wfs"
+GEOSAMPA_WFS_LAYER_NAME="geoportal:lote_cidadao"
 
 LDAP_SERVER=""
 LDAP_DOMAIN=""
@@ -10,3 +13,7 @@ LDAP_BASE=""
 
 USER_LDAP=""
 PASS_LDAP=""
+
+HEALTHCHECK_FRONTEND_URL="http://www.google.com" // Substituir pela URL do frontend
+HEALTHCHECK_MAX_DISK=0.9 // Monitorar disco: Ao ultrapassar 90% de capacidade de disco = erro/warning
+HEALTHCHECK_MAX_MEMORY=256*1024*1024  // Monitorar memória: Ao ultrapassar 256mb de ram = erro/warning
