--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
       POSTGRES_PASSWORD: dc3dc3
     ports:
       - '5432:5432'
+
+  minio:
+    image: quay.io/minio/minio
+    container_name: minio
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: adminadmin
+    ports:
+      - '9000:9000'
+      - '9090:9090'
+    volumes:
+      - /tmp/data:/data
+    command: server /data --console-address ":9090"
