--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
+    "minio": "^8.0.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -49,9 +50,11 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/ldapjs": "^3.0.6",
+    "@types/minio": "^7.1.1",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.8.10",
     "@types/passport-jwt": "^4.0.0",
     "@types/supertest": "^2.0.12",
