--- a/example.env
+++ b/example.env
@@ -14,6 +14,14 @@ LDAP_BASE=""
 USER_LDAP=""
 PASS_LDAP=""
 
+MINIO_ENDPOINT='localhost'
+MINIO_PORT=9000
+
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_USE_SSL=
+MINIO_BUCKET_NAME=
+
 HEALTHCHECK_FRONTEND_URL="http://www.google.com" // Substituir pela URL do frontend
 HEALTHCHECK_MAX_DISK=0.9 // Monitorar disco: Ao ultrapassar 90% de capacidade de disco = erro/warning
 HEALTHCHECK_MAX_MEMORY=256*1024*1024  // Monitorar memória: Ao ultrapassar 256mb de ram = erro/warning
