--- a/example.env
+++ b/example.env
@@ -22,6 +22,9 @@ MINIO_SECRET_KEY=
 MINIO_USE_SSL=
 MINIO_BUCKET_NAME=
 
+MINIO_MAX_FILE_UPLOADS_PER_ENTITY=50
+MINIO_PRIVATE_URL_EXPIRE_TIME=72*60*60 //72h
+
 HEALTHCHECK_FRONTEND_URL="http://www.google.com" // Substituir pela URL do frontend
 HEALTHCHECK_MAX_DISK=0.9 // Monitorar disco: Ao ultrapassar 90% de capacidade de disco = erro/warning
 HEALTHCHECK_MAX_MEMORY=256*1024*1024  // Monitorar memória: Ao ultrapassar 256mb de ram = erro/warning
